<resources>
    <string name="app_name">ShoppingTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_lists">Moje listy zakupów</string>
    <string name="menu_add_product">Dodaj produkt</string>
    <string name="menu_list_products">Zapisane produkty</string>
    <string name="menu_user_mgmt">Panel użytkownika</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_exit">Wyjście</string>
    <string name="general_copy"><![CDATA[©2015 P&C Innovations]]></string>

    <string name="project_name">Shopping Companion</string>

    <string name="action_press_back">Naciśnij przycisk WSTECZ ponownie, aby wyjść</string>
    <string name="title_activity_my_lists">MyLists</string>

    <string name="action_download_lists">Pobierz</string>
    <string name="action_add_list">Nowa lista</string>
    <string name="title_activity_add_product">AddProduct</string>

    <string name="action_addprod_scan_code">Zeskanuj kod kreskowy</string>
    <string name="action_addprod_search_name">Wyszukaj na podst. nazwy</string>
    <string name="action_addprod_custom">Własny...</string>
    <string name="label_last_product">Ostatnio skanowany:</string>
    <string name="text_barcode_app_required">Aplikacja wymaga zainstalowania czytnika kodów Google ZXing. Kliknij tutaj, aby pobrać</string>

    <string name="dialog_market_not_found">Nie znaleziono Sklepu Play!</string>
    <string name="dialog_ack">OK</string>
    <string name="dialog_title_error">Błąd</string>

    <string name="title_activity_find_product_by_code">FindProducyByCodeActivity</string>
    <string name="title_activity_find_producy_by_code">FindProducyByCodeActivity</string>

    <string name="title_scan_results">Wyniki wyszukiwania</string>
    <string name="title_activity_get_products_by_name">GetProductsByName</string>
    <string name="button_search">Szukaj</string>
    <string name="text_hint_enter_phrase">Szukana fraza...</string>
    <string name="label_new_list_name">Podaj nazwę listy:</string>
    <string name="hint_new_list">Nowa lista</string>

    <string name="action_rename_list">Zmień nazwę</string>
    <string name="action_delete_list">Usuń listę</string>
    <string name="title_activity_saved_products">Zapisane produkty</string>
    <string name="title_activity_add_item_to_list">Dodaj wpis do listy</string>
    <string name="button_get_product_from_saved">Z listy zapisanych</string>
    <string name="button_get_product_from_db">Z bazy danych</string>
    <string name="label_set_amount">Podaj ilość</string>
    <string name="title_">MainActivity</string>
    <string name="title_activity_product_finder">Wyszukiwanie produktu</string>
    <string name="label_bad_values">Proszę czekać, trwa wyszukiwanie produktu...</string>
    <string name="title_activity_splash_screen">Shopping Companion</string>
    <string name="label_hello">Shopping Companion</string>
    <string name="desc_logo">Logo</string>
    <string name="label_app_loading">Trwa ładowanie aplikacji</string>
    <string name="shared_prefs_key">com.pcinnovations.shoppingtest.SharedPrefs</string>
    <string name="label_add_product_dialog">Dodaj produkt</string>
    <string name="title_activity_show_list">Lista</string>
    <string name="action_delete_item">Usuń wpis</string>
    <string name="action_change_amount">Zmień ilość</string>
    <string name="label_bought">Kupione</string>
    <string name="alert_no_net_title">Uwaga</string>
    <string name="alert_no_net_body">Aplikacja wymaga dostępu do Internetu. Sprawdź połączenie i spróbuj ponownie.</string>
    <string name="action_clear_cache">Wyczyść</string>
    <string name="alert_clear_cache_title">Uwaga</string>
    <string name="alert_clear_cache_body">Czy na pewno chcesz wyczyścić listę zapisanych produktów? Operacja jest nieodwracalna!</string>
    <string name="button_get_from_essentials">Podstawowe produkty</string>
    <string name="title_activity_get_product_from_essentials">Podstawowe produkty</string>
    <string name="label_custom_set_ean">Kod kreskowy:</string>
    <string name="label_custom_set_name">Nazwa produktu:</string>
</resources>
