<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pcinnovations.shoppingtest.AddProduct">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_addprod_scan_code"
            android:id="@+id/btnAddProdScanCode"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_addprod_search_name"
            android:id="@+id/btnAddProdEnterName"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_barcode_app_required"
                android:id="@+id/txtBarcodeApp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom|center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
